# gateway/requests/requests.go
@@ -36,6 +36,10 @@ type CreateFunctionRequest struct {
 	// back-end for making scheduling or routing decisions
 	Labels *map[string]string `json:"labels"`
 
+	// Annotations are metadata for functions which may be used by the
+	// back-end for management, orchestration, events and build tasks
+	Annotations *map[string]string `json:"annotations"`
+
 	// Limits for function
 	Limits *FunctionResources `json:"limits"`
 
@@ -67,6 +71,10 @@ type Function struct {
 	// Labels are metadata for functions which may be used by the
 	// back-end for making scheduling or routing decisions
 	Labels *map[string]string `json:"labels"`
+
+	// Annotations are metadata for functions which may be used by the
+	// back-end for management, orchestration, events and build tasks
+	Annotations *map[string]string `json:"annotations"`
 }
 
 // AsyncReport is the report from a function executed on a queue worker.
